--- a/Me/me.html
+++ b/Me/me.html
@@ -125,6 +125,32 @@
             </p>
           </div>
         </section>
+        <section class="contact details-container">
+          <div class="h-and-p">
+            <h1 class="title">
+              contact me
+            </h1>
+          </div>
+          <div class="h-and-p">
+            <ul class="explanation">
+              <li>
+                <a href="https://www.facebook.com/ahmed.essam.12720100"target="blank">
+                  <img class="social" src="../img/iconfinder_01_111032.png" alt="">
+                </a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com/essam1197/"target="blank">
+                  <img class="social" src="../img/iconfinder_38-instagram_104466.png" alt="">
+                </a>
+              </li>
+              <li>
+                <a href="https://twitter.com/ahmedes51577143" target="blank">
+                  <img src="../img/iconfinder_twitter_246540.png" class="social" alt="">
+                </a>
+              </li>
+            </ul>
+          </div>
+        </section>
       </main>
       <footer><h5>anything is very hard until you try</h5></footer>
     </div>
